# geo-agent

./: LICENSE  README.md  pyproject.toml
deepagents/clase1/: agente1_simple.ipynb  agente2_tools_simples.ipynb
deepagents/clase2/: SKILL.md  test.ipynb  tools.py
deepagents/clase3/: SKILL.md  agent.py  app.py  extraction.py  models.py  tools.py
deepagents/clase4/: SKILL.md  manifest.json  server.py  tools.py
