[project]
name = "geo-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.7",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "langchain-openai>=1.2.2",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "mcp[cli]>=1.28.1",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "streamlit-folium>=0.24.0",
]
